fixed overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  overflow: hidden;
+}
+
 i {
   cursor: pointer;
 }
@@ -14,10 +18,7 @@ nav {
   justify-content: space-between;
   box-shadow: 1px 1px 0 0 rgb(130, 129, 129);
   width: 100%;
-  /* scale: 1; */
-  /* width: min-content; */
   position: fixed;
-  /* background-color: rgb(95, 17, 17); */
   z-index: 1;
 }
 
@@ -51,8 +52,6 @@ nav {
   margin-left: 0%;
   display: flex;
   padding: 1rem;
-  /* height: 5rem;  */
-  /* justify-content: center; */
   align-items: center;
 }
 
@@ -67,7 +66,6 @@ nav {
   padding: 1rem;
   padding-inline: 0;
   width: 11rem;
-  /* background-color: aqua; */
   align-content: center;
   display: flex;
   justify-content: space-around;
@@ -86,6 +84,7 @@ nav {
 
 .sidebar button {
   cursor: pointer;
+  padding: 0.45rem;
 }
 
 .sidebar button:hover {
